# work

./: Cargo.toml  flake.nix
src/: api.rs  cli.rs  file.rs  main.rs  slot.rs  structs.rs
