[package]
name = "work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
